--- a/model.ipynb
+++ b/model.ipynb
@@ -7,10 +7,16 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
-    "import sklearn as skl\n",
-    "from sklearn.linear_model import LinearRegression"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n"
    ]
   },
   {
@@ -19,9 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = \"train.csv\"\n",
-    "test_path = \"test.csv\"\n",
-    "label_path = \"gender_submission.csv\""
+    "\n",
+    "# load data\n",
+    "train = pd.read_csv('train.csv')\n",
+    "test = pd.read_csv('test.csv')\n"
    ]
   },
   {
@@ -30,9 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv(train_path)\n",
-    "test_data = pd.read_csv(test_path)\n",
-    "label_data = pd.read_csv(label_path)"
+    "\n",
+    "# visualize missing values\n",
+    "sns.heatmap(train.isnull(), yticklabels=False, cbar=False, cmap='viridis')\n",
+    "plt.show()"
    ]
   },
   {
@@ -68,8 +76,7 @@
     }
    ],
    "source": [
-    "print(train_data.head())\n",
-    "# sns.pairplot(train_data)"
+    "train"
    ]
   },
   {
@@ -78,9 +85,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def missingValueCol(data):\n",
-    "    cols = data.columns[data.isnull().any()].tolist()\n",
-    "    return cols"
+    "\n",
+    "# fill missing values\n",
+    "imputer = SimpleImputer(strategy='most_frequent')\n",
+    "train['Age'] = imputer.fit_transform(train[['Age']])\n",
+    "train['Embarked'] = imputer.fit_transform(train[['Embarked']])\n",
+    "\n",
+    "test['Age'] = imputer.fit_transform(test[['Age']])\n",
+    "test['Fare'] = imputer.fit_transform(test[['Fare']])\n",
+    "\n",
+    "# convert categorical variables to numerical\n",
+    "label_encoder = LabelEncoder()\n",
+    "train['Sex'] = label_encoder.fit_transform(train['Sex'])\n",
+    "train['Embarked'] = label_encoder.fit_transform(train['Embarked'])\n",
+    "\n",
+    "test['Sex'] = label_encoder.fit_transform(test['Sex'])\n",
+    "test['Embarked'] = label_encoder.fit_transform(test['Embarked'])\n",
+    "\n",
+    "# scale numerical variables\n",
+    "scaler = StandardScaler()\n",
+    "train[['Age', 'Fare']] = scaler.fit_transform(train[['Age', 'Fare']])\n",
+    "test[['Age', 'Fare']] = scaler.fit_transform(test[['Age', 'Fare']])\n",
+    "\n",
+    "train = train.drop('Name', axis = 1)\n",
+    "train = train.drop('Ticket', axis = 1)\n",
+    "train = train.drop('Cabin', axis = 1)\n",
+    "\n",
+    "test = test.drop('Name', axis = 1)\n",
+    "test = test.drop('Ticket', axis = 1)\n",
+    "test = test.drop('Cabin', axis = 1)\n",
+    "\n",
+    "# split the data into train and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(train.drop('Survived', axis=1), train['Survived'], \n",
+    "                                                  test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -98,8 +135,13 @@
     }
    ],
    "source": [
-    "print(missingValueCol(train_data))\n",
-    "print(missingValueCol(test_data))\n"
+    "\n",
+    "# train logistic regression model\n",
+    "log_reg = LogisticRegression()\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "\n",
+    "# predict on validation set\n",
+    "y_pred = log_reg.predict(X_val)\n"
    ]
   },
   {
@@ -128,8 +170,11 @@
     }
    ],
    "source": [
-    "trainA = train_data.describe()\n",
-    "print(trainA.head())"
+    "\n",
+    "# evaluate the model\n",
+    "print('Accuracy Score:', accuracy_score(y_val, y_pred))\n",
+    "print('Confusion Matrix:', confusion_matrix(y_val, y_pred))\n",
+    "print('Classification Report:', classification_report(y_val, y_pred))\n"
    ]
   },
   {
@@ -164,7 +209,18 @@
     }
    ],
    "source": [
-    "train_data.info()"
+    "\n",
+    "# train decision tree model\n",
+    "dtree = DecisionTreeClassifier()\n",
+    "dtree.fit(X_train, y_train)\n",
+    "\n",
+    "# predict on validation set\n",
+    "y_pred = dtree.predict(X_val)\n",
+    "\n",
+    "# evaluate the model\n",
+    "print('Accuracy Score:', accuracy_score(y_val, y_pred))\n",
+    "print('Confusion Matrix:', confusion_matrix(y_val, y_pred))\n",
+    "print('Classification Report:', classification_report(y_val, y_pred))\n"
    ]
   },
   {
@@ -172,7 +228,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# train random forest model\n",
+    "rfc = RandomForestClassifier()\n",
+    "rfc.fit(X_train, y_train)\n",
+    "\n",
+    "# predict on validation set\n",
+    "y_pred = rfc.predict(X_val)\n",
+    "\n",
+    "# evaluate the model\n",
+    "print('Accuracy Score:', accuracy_score(y_val, y_pred))\n",
+    "print('Confusion Matrix:', confusion_matrix(y_val, y_pred))\n",
+    "print('Classification Report:', classification_report(y_val, y_pred))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = pd.DataFrame(rfc.predict(test), columns=['Survived'])\n",
+    "pd.concat([test['PassengerId'],y], axis=1).to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# train gradient boosting model\n",
+    "gbc = GradientBoostingClassifier()\n",
+    "gbc.fit(X_train, y_train)\n",
+    "\n",
+    "# predict on validation set\n",
+    "y_pred = gbc.predict(X_val)\n",
+    "\n",
+    "print('Accuracy Score:', accuracy_score(y_val, y_pred))\n",
+    "print('Confusion Matrix:', confusion_matrix(y_val, y_pred))\n",
+    "print('Classification Report:', classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_val"
+   ]
   }
  ],
  "metadata": {
